tests/ui/view-types/feature-gate-view-types.stderr
error[E0658]: use of unstable library feature `view_type_macro`
  --> $DIR/feature-gate-view-types.rs:10:15
   |
LL | type FooBar = view_type!(Foo.{ bar });
   |               ^^^^^^^^^
   |
   = note: see issue #155938 <https://github.com/rust-lang/rust/issues/155938> for more information
   = help: add `#![feature(view_type_macro)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `view_type_macro`
  --> $DIR/feature-gate-view-types.rs:12:15
   |
LL | type FooBaz = view_type!(Foo.{ baz });
   |               ^^^^^^^^^
   |
   = note: see issue #155938 <https://github.com/rust-lang/rust/issues/155938> for more information
   = help: add `#![feature(view_type_macro)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
